# clipgenius-ai

./: .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  start_all.sh
backend/app/: config.py  database.py  main.py  worker.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/models/: __init__.py  clip.py  oauth.py  schedule.py  user.py  video.py
backend/app/routers/: __init__.py  auth.py  clips.py  files.py  integrations.py  schedule.py  videos.py
backend/app/schemas/: __init__.py  auth.py  clip.py  schedule.py  video.py
backend/app/services/: captioner.py  downloader.py  free_stack.py  instagram.py  lipsync.py  metadata_heuristic.py  openai_client.py  presets.py  segmenter.py  storage.py  video_processor.py  youtube.py
backend/app/tasks/: celery_app.py  posting_tasks.py  video_tasks.py
backend/tests/: test_captioner_offline.py  test_segmenter.py  test_video_processor_captions.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/schedule/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/upload/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AuthGuard.tsx  ClipCard.tsx  Logo.tsx  Sidebar.tsx
frontend/lib/: api.ts  types.ts  utils.ts
(+1 files in other folders)
