[project]
name = "clipgenius-backend"
version = "0.1.0"
description = "ClipGenius AI backend — FastAPI service for video repurposing"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",
    "boto3>=1.35.0",
    "openai>=1.50.0",
    "yt-dlp>=2024.10.7",
    "ffmpeg-python>=0.2.0",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=1.26.4,<2.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.149.0",
    "httpx>=0.27.2",
    "email-validator>=2.2.0",
    "Pillow>=10.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# UP042: keep str+Enum (broader compat across SQLAlchemy / pydantic versions); B008: FastAPI Depends pattern
ignore = ["E501", "B008", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
